[gd_scene load_steps=12 format=3 uid="uid://iioqp7davyfg"]

[ext_resource type="Script" uid="uid://c6aa2nqx7wlfk" path="res://Scripts/Interactables/SpringBoard.gd" id="1_h1ti7"]
[ext_resource type="Texture2D" uid="uid://rg7pub15pvux" path="res://Assets/Sprites/Objects/Ballbar.png" id="2_ihst5"]
[ext_resource type="Script" uid="uid://t20jgwyn5s65" path="res://Scripts/LevelGimicks/player_jump_disable_area.gd" id="3_1hapd"]

[sub_resource type="Animation" id="Animation_5bca3"]
resource_name = "High"
step = 0.025
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Help/Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.025, 0.05, 0.075, 0.1, 0.125, 0.375, 0.4, 0.425, 0.45, 0.475, 0.5, 0.525, 0.55, 0.575, 0.6, 0.625, 0.65, 0.675, 0.7, 0.725, 0.75),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [1, 4, 2, 2, 8, 10, 2, 6, 9, 11, 4, 8, 4, 6, 9, 11, 4, 8, 4, 11, 7, 1]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Collision:shape:a")
tracks/1/interp = 2
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.025, 0.05, 0.1, 0.125, 0.35, 0.375, 0.4),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1e-05, 1, 1, 1),
"update": 0,
"values": [Vector2(-20, 0), Vector2(-20, 4), Vector2(-20, 6), Vector2(-20, 12), Vector2(-20, 14), Vector2(-20, 14), Vector2(-20, 6), Vector2(-20, 0)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Collision:shape:b")
tracks/2/interp = 2
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 0.025, 0.05, 0.1, 0.125, 0.375, 0.4),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1),
"update": 0,
"values": [Vector2(20, 0), Vector2(20, 0), Vector2(20, 0), Vector2(20, 0), Vector2(20, 0), Vector2(20, 0), Vector2(20, 0)]
}
tracks/3/type = "method"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath(".")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0.4),
"transitions": PackedFloat32Array(1),
"values": [{
"args": [2],
"method": &"launch_player"
}]
}

[sub_resource type="Animation" id="Animation_ig6hw"]
resource_name = "Low"
length = 0.3
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Help/Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 1,
"values": [1, 3, 7, 1]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Collision:shape:a")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(-20, 0)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Collision:shape:b")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(20, 0)]
}
tracks/3/type = "method"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath(".")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0.2),
"transitions": PackedFloat32Array(1),
"values": [{
"args": [0],
"method": &"launch_player"
}]
}

[sub_resource type="Animation" id="Animation_lj8n8"]
resource_name = "Medium"
length = 0.7
step = 0.05
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Help/Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.05, 0.1, 0.15, 0.35, 0.4, 0.45, 0.5, 0.55, 0.6, 0.65),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [1, 3, 4, 2, 7, 6, 3, 4, 11, 7, 1]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Collision:shape:a")
tracks/1/interp = 2
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.05, 0.1, 0.3, 0.35, 0.4),
"transitions": PackedFloat32Array(1, 1, 1e-05, 1, 1, 1),
"update": 0,
"values": [Vector2(-20, 0), Vector2(-20, 2), Vector2(-20, 4), Vector2(-20, 4), Vector2(-20, 6), Vector2(-20, 0)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Collision:shape:b")
tracks/2/interp = 2
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 0.05, 0.1, 0.35, 0.4),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1),
"update": 0,
"values": [Vector2(20, 0), Vector2(20, 0), Vector2(20, 0), Vector2(20, 0), Vector2(20, 0)]
}
tracks/3/type = "method"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath(".")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0.35),
"transitions": PackedFloat32Array(1),
"values": [{
"args": [1],
"method": &"launch_player"
}]
}

[sub_resource type="Animation" id="Animation_x8xwf"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Help/Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [1]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Collision:shape:a")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(-20, 0)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Collision:shape:b")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(20, 0)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_xr7y1"]
_data = {
&"High": SubResource("Animation_5bca3"),
&"Low": SubResource("Animation_ig6hw"),
&"Medium": SubResource("Animation_lj8n8"),
&"RESET": SubResource("Animation_x8xwf")
}

[sub_resource type="RectangleShape2D" id="RectangleShape2D_6aqs2"]
size = Vector2(40, 5)

[sub_resource type="SegmentShape2D" id="SegmentShape2D_16fjh"]
resource_local_to_scene = true
a = Vector2(-20, 0)
b = Vector2(20, 0)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_j8ur0"]
size = Vector2(40, 5)

[node name="SpringBoard" type="AnimatableBody2D"]
physics_interpolation_mode = 2
script = ExtResource("1_h1ti7")

[node name="Animation" type="AnimationPlayer" parent="."]
libraries = {
&"": SubResource("AnimationLibrary_xr7y1")
}
speed_scale = 1.2

[node name="ColorRect" type="ColorRect" parent="."]
visible = false
z_index = -4096
offset_left = -24.0
offset_top = -16.0
offset_right = 24.0
offset_bottom = 24.0

[node name="Help" type="Node2D" parent="."]

[node name="Sprite" type="Sprite2D" parent="Help"]
position = Vector2(0, -3)
texture = ExtResource("2_ihst5")
hframes = 4
vframes = 4
frame = 1

[node name="WallJoint" type="Node2D" parent="Help"]
position = Vector2(20, -3)

[node name="JumpDisableArea" type="Area2D" parent="Help"]
visible = false
script = ExtResource("3_1hapd")

[node name="CollisionShape2D" type="CollisionShape2D" parent="Help/JumpDisableArea"]
position = Vector2(0, -6)
shape = SubResource("RectangleShape2D_6aqs2")

[node name="Collision" type="CollisionShape2D" parent="."]
z_index = 1
position = Vector2(0, -3)
shape = SubResource("SegmentShape2D_16fjh")
one_way_collision = true
debug_color = Color(0, 0.6, 0.701961, 1)

[node name="Hitbox" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Hitbox"]
position = Vector2(0, -3.5)
shape = SubResource("RectangleShape2D_j8ur0")

[connection signal="area_entered" from="Hitbox" to="." method="_on_hitbox_area_entered"]
[connection signal="area_exited" from="Hitbox" to="." method="_on_hitbox_area_exited"]
